--- a/templates/tmpl_learn_object_list.html
+++ b/templates/tmpl_learn_object_list.html
@@ -171,21 +171,22 @@
 				return $(this).form('validate');
 			},
 			success : function(data) {
-				var jsonData;
+				var jsonData = {};
 				try {
-					var data2 = JSON.stringify(data);
-					jsonData = JSON && JSON.parse(data2) || $.parseJSON(data2);
+					//var data2 = JSON.stringify(data);
+					jsonData = JSON && JSON.parse(data) || $.parseJSON(data);
 				} catch (e) {
 					$.messager.alert('Error', e.description + data, 'Error');
 				}
 				if (jsonData.type === 'E') {
 					$.messager.alert('Error', jsonData.Message, 'error');
 				} else {
-					var newobject = jsonData.newobject[0];
 					// Add it into the list with the new id
 					$('#formCrtObj').form('clear');
 					$('#dlgCreate').dialog('close');
-					if (newobject) {
+					
+					if (typeof(jsonData) === "object" && jsonData.newobject && jsonData.newobject.length >= 1) {
+						var newobject = jsonData.newobject[0];
 						$('#dg').datagrid('appendRow', {
 							id : newobject.id,
 							categoryname : newobject.categoryname,
@@ -202,10 +203,10 @@
 				return $(this).form('validate');
 			},
 			success : function(data) {
-				var jsonData;
+				var jsonData = {};
 				try {
-					var data2 = JSON.stringify(data);
-					jsonData = JSON && JSON.parse(data2) || $.parseJSON(data2);
+					//var data2 = JSON.stringify(data);
+					jsonData = JSON && JSON.parse(data) || $.parseJSON(data);
 				} catch (e) {
 					$.messager.alert('Error', e.description + data, 'Error');
 				}
