--- a/templates/tmpl_pageheader.html
+++ b/templates/tmpl_pageheader.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>ZAC 003</title>
+	<title>Home Info Hub</title>
 
 	<script src="js\jquery-1.11.2.min.js"></script>
 	<script src="js\jquery.easyui.min.js"></script>
