Commit with the recent changes.

--- a/templates/tmpl_mainpage.html
+++ b/templates/tmpl_mainpage.html
@@ -9,10 +9,11 @@
 		}
 	</style>
 
-	<h2>Main page</h2>
+	<h2>Main page of HIH</h2>
 
 	<div>
-		<p>This PoC demonstrates how to use jQuery Easy UI Library, and how to validate the form . <br />
+		<p>HIH, the abbreviation of Home Information Hub, which is built targets for all necessary information we need cross the home.
+		The PoC here, demonstrates how to use jQuery Easy UI Library, and how to validate the form . <br />
 		It also contains the objects validation, including: <br />
 		(1) Reading data from MySql; <br />
 		(2) Writing data back to MySql; <br />
