--- a/templates/tmpl_pagefooter.html
+++ b/templates/tmpl_pagefooter.html
@@ -2,6 +2,7 @@
 	<!-- Footer area begins -->
 	<div id="footer" align="center">
 		<div><span data-i18n="Common.Copyright">Copyright</span> © 2014 - 2015 Alva Chien</div>
+		<div><a href="https://github.com/alvachien/hih">HIH on Github</a></div>
 	</div>
 	<!-- Footer area ends -->
 </body>
