Continue II, fix the module issue.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,3 +1,4 @@
 <div id="home" class="row">
-<h2> Welcome to the Home Page!</h2>
+<h2> Welcome to the {{title}} Page!</h2>
+<button ng-click="logout()">Logout</button>
 </div>
