--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,4 @@
-<div id="home" class="row">
-<h2> Welcome to the {{title}} Page!</h2>
-<button ng-click="logout()">Logout</button>
+<div id="viewHome">
+	<h2> Welcome back, {{currentUser.username}}!</h2>
+	<button ng-click="logout()">Logout</button>
 </div>
