--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,4 +1,4 @@
-<div id="login">	
+<div id="viewLogin">	
 	<form class="form-signin">
         <h2 class="form-signin-heading">Please sign in</h2>
         
@@ -6,7 +6,7 @@
         <input id="inputUser" class="form-control" placeholder="User name" required autofocus ng-model="credentials.username" />
         
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" ng-model="credentials.password" required>
         
         <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="login()">Sign in</button>
 	</form>
