--- a/app/views/register.html
+++ b/app/views/register.html
@@ -3,17 +3,17 @@
         <h2 class="form-register-heading">User Register</h2>
         
         <label for="inputUser" class="sr-only">User name</label>
-        <input id="inputUser" class="form-control" placeholder="User name" required autofocus>
+        <input id="inputUser" class="form-control" placeholder="User name" ng-model="registerInfo.username" required autofocus>
         
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <input type="password" id="inputPassword" class="form-control" ng-model="registerInfo.password" placeholder="Password" required>
 
         <label for="inputConfirmPassword" class="sr-only">Confirm Password</label>
-        <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Confirm Password" required>
+        <input type="password" id="inputConfirmPassword" class="form-control" ng-model="registerInfo.confirmpassword" placeholder="Confirm Password" required>
 
         <label for="inputMail" class="sr-only">Mailbox</label>
-        <input type="email" id="inputMail" class="form-control" placeholder="Mailbox" required>
+        <input type="email" id="inputMail" class="form-control" ng-model="registerInfo.mailbox" placeholder="Mailbox"  required>
         
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="submitRegister()">Register</button>
 	</form>
 </div>
