Continue to commit.

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -10,4 +10,21 @@
         
         <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="login()">Sign in</button>
 	</form>
+	
+     <div class="modal fade" id="dlgLoginError">
+  		<div class="modal-dialog">
+    		<div class="modal-content">
+      			<div class="modal-header">
+        			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        			<h4 class="modal-title">{{ErrorHeader}}</h4>
+      			</div>
+      			<div class="modal-body">
+        			<p>{{ErrorDetail}}</p>
+      			</div>
+      			<div class="modal-footer">
+        			<button type="button" class="btn btn-default btn-primary" data-dismiss="modal">Close</button>
+      			</div>
+    		</div><!-- /.modal-content -->
+  		</div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
 </div>
