Continues working on the AngularJS switching.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,6 @@
 <div id="viewHome">
 	<h2> Welcome back, {{currentUser.userdisplayas}}!</h2>
-	
+	<h3>It's a home page.</h3>
+	<h3>It shall contains some descriptions.</h3>
+	<h3>And it hasn't been done yet.</h3>
 </div>
