--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,10 @@
 <div id="viewHome">
-	<h2> Welcome back, {{currentUser.userdisplayas}}!</h2>
-	<h3>It's a home page.</h3>
-	<h3>It shall contains some descriptions.</h3>
-	<h3>And it hasn't been done yet.</h3>
+	<div class="jumbotron">
+  		<h1>Welcome back, {{currentUser.userdisplayas}}!</h1>
+	  	<p>This is a home page. <br />
+	  	It shall contains some descriptions.<br />
+	  	And it hasn't been done yet.
+	  	</p>
+	  <p><a class="btn btn-primary btn-lg" href="#/userdetail" role="button">Take a look at User Detail</a></p>
+	</div>
 </div>
