--- a/app/views/learnobject.html
+++ b/app/views/learnobject.html
@@ -1,6 +1,10 @@
 <div id="viewLearnObject">
 	<h2>It's a Learn Object page!</h2>
 	
+	<div class="btn-group" role="group" aria-label="...">
+  		<button type="button" class="btn btn-primary">New</button>
+	</div>
+
 	<table st-table="displayedCollection" st-safe-src="rowCollection" class="table table-striped">
 			<thead>
 			<tr>
@@ -22,8 +26,12 @@
 				<td>{{row.name}}</td>
 				<td>{{row.content}}</td>
 				<td>
+				<button type="button" ng-click="editItem(row)" class="btn btn-sm btn-warning">
+					<i class="glyphicon glyphicon-pencil">
+					</i>
+				</button>
 				<button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
-					<i class="glyphicon glyphicon-remove-circle">
+					<i class="glyphicon glyphicon-trash">
 					</i>
 				</button>
 				</td>
