--- a/app/views/learnobjectmaintain.html
+++ b/app/views/learnobjectmaintain.html
@@ -3,19 +3,19 @@
   		<div class="form-group">
     		<label class="control-label col-sm-2" for="iptID">ID:</label>
     		<div class="col-sm-10">
-      			<input type="email" class="form-control" id="iptID" disabled placeholder="ID" ng-model="LearnObject.id">
+      			<input type="text" class="form-control" id="iptID" disabled placeholder="ID" ng-model="LearnObject.id">
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <label class="control-label col-sm-2" for="iptName">Name</label>
 		    <div class="col-sm-10"> 
-		      <input type="password" class="form-control" id="iptName" placeholder="Name" ng-model="LearnObject.name">
+		      <input type="text" class="form-control" id="iptName" placeholder="Name" ng-model="LearnObject.name">
 		    </div>
 		  </div>
 		  <div class="form-group"> 
 		    <label class="control-label col-sm-2" for="iptContent">Content</label>
 		    <div class="col-sm-10"> 
-		      <input type="password" class="form-control" id="iptContent" placeholder="Content" ng-model="LearnObject.content">
+		      <input type="text" class="form-control" id="iptContent" placeholder="Content" ng-model="LearnObject.content">
 		    </div>
 		  </div>
 		  <div class="form-group"> 
