--- a/app/views/learnobject.html
+++ b/app/views/learnobject.html
@@ -1,41 +1,31 @@
 <div id="viewLearnObject">
-	<h2>It's a Learn Object page!</h2>
-	
-	<div class="btn-group" role="group" aria-label="...">
-  		<button type="button" class="btn btn-primary">New</button>
+	<div class="page-header">
+  		<h2>Learn Object<small> {{Activity}}</small></h2>
 	</div>
-
-	<table st-table="displayedCollection" st-safe-src="rowCollection" class="table table-striped">
-			<thead>
-			<tr>
-				<th st-sort="ID">ID</th>
-				<th st-sort="ctgyID">Category ID</th>
-				<th st-sort="ctgyName">Category Name</th>
-				<th st-sort="Name">Name</th>
-				<th st-sort="content">Content</th>
-			</tr>
-			<tr>
-				<th colspan="5"><input st-search="" class="form-control" placeholder="global search ..." type="text"/></th>
-			</tr>
-			</thead>
-			<tbody>
-			<tr ng-repeat="row in displayedCollection">
-				<td>{{row.id}}</td>
-				<td>{{row.categoryid}}</td>
-				<td>{{row.categoryname}}</td>
-				<td>{{row.name}}</td>
-				<td>{{row.content}}</td>
-				<td>
-				<button type="button" ng-click="editItem(row)" class="btn btn-sm btn-warning">
-					<i class="glyphicon glyphicon-pencil">
-					</i>
-				</button>
-				<button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
-					<i class="glyphicon glyphicon-trash">
-					</i>
-				</button>
-				</td>
-			</tr>
-			</tbody>
-		</table>
+	<form class="form-horizontal" role="form">
+  		<div class="form-group">
+    		<label class="control-label col-sm-2" for="iptID">ID:</label>
+    		<div class="col-sm-10">
+      			<input type="text" class="form-control" id="iptID" disabled placeholder="ID" ng-model="LearnObject.id">
+		    </div>
+		  </div>
+		  <div class="form-group">
+		    <label class="control-label col-sm-2" for="iptName">Name</label>
+		    <div class="col-sm-10"> 
+		      <input type="text" class="form-control" id="iptName" placeholder="Name" ng-model="LearnObject.name">
+		    </div>
+		  </div>
+		  <div class="form-group"> 
+		    <label class="control-label col-sm-2" for="iptContent">Content</label>
+		    <div class="col-sm-10"> 
+		      <input type="text" class="form-control" id="iptContent" placeholder="Content" ng-model="LearnObject.content">
+		    </div>
+		  </div>
+		  <div class="form-group"> 
+		    <div class="col-sm-offset-2 col-sm-10">
+		      <button type="submit" class="btn btn-default btn-primary" ng-click="submit()">Submit</button>
+		      <button class="btn btn-danger" ng-click="close()">Close</button>
+		    </div>
+		  </div>
+	</form>
 </div>
