--- a/app/views/learnobject.html
+++ b/app/views/learnobject.html
@@ -9,6 +9,16 @@
       			<input type="text" class="form-control" id="iptID" disabled placeholder="ID" ng-model="LearnObject.id">
 		    </div>
 		  </div>
+  		<div class="form-group">
+    		<label class="control-label col-sm-2" for="iptCtgy">Category:</label>
+    		<div class="col-sm-5">
+      			<select id="iptCtgy" ng-model="LearnObject.categoryid" ng-options="CategoryIDs">
+      			</select>
+		    </div>
+    		<div class="col-sm-5">
+      			<Input type="text" id="iptCtgyName" ng-model="LearnObject.categoryname" disabled>      			
+		    </div>
+		  </div>
 		  <div class="form-group">
 		    <label class="control-label col-sm-2" for="iptName">Name</label>
 		    <div class="col-sm-10"> 
@@ -18,12 +28,14 @@
 		  <div class="form-group"> 
 		    <label class="control-label col-sm-2" for="iptContent">Content</label>
 		    <div class="col-sm-10"> 
-		      <input type="text" class="form-control" id="iptContent" placeholder="Content" ng-model="LearnObject.content">
+		      <textarea class="form-control" id="iptContent" placeholder="Content" ng-model="LearnObject.content"
+		      	ng-change="setDirty()">
+		      </textarea>
 		    </div>
 		  </div>
 		  <div class="form-group"> 
 		    <div class="col-sm-offset-2 col-sm-10">
-		      <button type="submit" class="btn btn-default btn-primary" ng-click="submit()">Submit</button>
+		      <button type="submit" class="btn btn-default btn-primary" ng-click="submit()" ng-disabled="!isDirty">Submit</button>
 		      <button class="btn btn-danger" ng-click="close()">Close</button>
 		    </div>
 		  </div>
