--- a/app/views/learnobject.html
+++ b/app/views/learnobject.html
@@ -2,6 +2,14 @@
 	<div class="page-header">
   		<h2>Learn Object<small> {{Activity}}</small></h2>
 	</div>
+	
+	<div id="areaAlert" class="alert alert-danger" role="alert">
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+  			<span aria-hidden="true">&times;</span>
+		</button>
+		{{ErrorDetail}}
+	</div>
+	
 	<form class="form-horizontal" role="form">
   		<div class="form-group">
     		<label class="control-label col-sm-2" for="iptID">ID:</label>
@@ -11,32 +19,34 @@
 		  </div>
   		<div class="form-group">
     		<label class="control-label col-sm-2" for="iptCtgy">Category:</label>
-    		<div class="col-sm-5">
-      			<select id="iptCtgy" ng-model="LearnObject.categoryid" ng-options="CategoryIDs">
+    		<div class="col-sm-10">
+      			<select id="iptCtgy" ng-model="LearnObject.categoryid" ng-options="ctgy.id as ctgy.text for ctgy in CategoryIDs"
+      				ng-change="setDirty()">
+      				<!-- Example 1:  color.name group by color.shade disable when color.notAnOption for color in colors
+      					Example 2: usertype.value as usertype.text for usertype in userTypes 
+      				-->
       			</select>
-		    </div>
-    		<div class="col-sm-5">
-      			<Input type="text" id="iptCtgyName" ng-model="LearnObject.categoryname" disabled>      			
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <label class="control-label col-sm-2" for="iptName">Name</label>
 		    <div class="col-sm-10"> 
-		      <input type="text" class="form-control" id="iptName" placeholder="Name" ng-model="LearnObject.name">
+		      <input type="text" class="form-control" id="iptName" placeholder="Name" ng-model="LearnObject.name"
+		      	ng-change="setDirty()">
 		    </div>
 		  </div>
 		  <div class="form-group"> 
 		    <label class="control-label col-sm-2" for="iptContent">Content</label>
 		    <div class="col-sm-10"> 
 		      <textarea class="form-control" id="iptContent" placeholder="Content" ng-model="LearnObject.content"
-		      	ng-change="setDirty()">
+		      		ng-change="setDirty()" rows="20">
 		      </textarea>
 		    </div>
 		  </div>
 		  <div class="form-group"> 
 		    <div class="col-sm-offset-2 col-sm-10">
 		      <button type="submit" class="btn btn-default btn-primary" ng-click="submit()" ng-disabled="!isDirty">Submit</button>
-		      <button class="btn btn-danger" ng-click="close()">Close</button>
+		      <button class="btn btn-danger close" ng-click="close()">Cancel</button>
 		    </div>
 		  </div>
 	</form>
