--- a/app/views/learnobject.html
+++ b/app/views/learnobject.html
@@ -3,50 +3,41 @@
   		<h2>Learn Object<small> {{Activity}}</small></h2>
 	</div>
 	
-	<div id="areaAlert" class="alert alert-danger" role="alert">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-  			<span aria-hidden="true">&times;</span>
-		</button>
-		{{ErrorDetail}}
-	</div>
-	
-	<form class="form-horizontal" role="form">
+	<form class="form-horizontal" role="form" name="frmObj">
   		<div class="form-group">
     		<label class="control-label col-sm-2" for="iptID">ID:</label>
     		<div class="col-sm-10">
-      			<input type="text" class="form-control" id="iptID" disabled placeholder="ID" ng-model="LearnObject.id">
+      			<input type="text" class="form-control" id="iptID" readonly="readonly" placeholder="ID" ng-model="ObjectID">
 		    </div>
-		  </div>
+		</div>
   		<div class="form-group">
     		<label class="control-label col-sm-2" for="iptCtgy">Category:</label>
     		<div class="col-sm-10">
-      			<select id="iptCtgy" ng-model="LearnObject.categoryid" ng-options="ctgy.id as ctgy.text for ctgy in CategoryIDs"
-      				ng-change="setDirty()">
+      			<select id="iptCtgy" ng-model="ObjectCategoryID" ng-options="ctgy.id as ctgy.text for ctgy in CategoryIDs">
       				<!-- Example 1:  color.name group by color.shade disable when color.notAnOption for color in colors
       					Example 2: usertype.value as usertype.text for usertype in userTypes 
       				-->
       			</select>
 		    </div>
-		  </div>
-		  <div class="form-group">
+		</div>
+		<div class="form-group">
 		    <label class="control-label col-sm-2" for="iptName">Name</label>
 		    <div class="col-sm-10"> 
-		      <input type="text" class="form-control" id="iptName" placeholder="Name" ng-model="LearnObject.name"
-		      	ng-change="setDirty()">
-		    </div>
-		  </div>
-		  <div class="form-group"> 
+		      <input type="text" class="form-control" id="iptName" placeholder="Name" ng-model="ObjectName" required>
+		 	</div>
+		 </div>
+		 <div class="form-group"> 
 		    <label class="control-label col-sm-2" for="iptContent">Content</label>
 		    <div class="col-sm-10"> 
-		      <textarea class="form-control" id="iptContent" placeholder="Content" ng-model="LearnObject.content"
-		      		ng-change="setDirty()" rows="20">
+		      <textarea class="form-control" id="iptContent" placeholder="Content" ng-model="ObjectContent"  rows="20" required>
 		      </textarea>
-		    </div>
+		 	 </div>
 		  </div>
+		  
 		  <div class="form-group"> 
 		    <div class="col-sm-offset-2 col-sm-10">
-		      <button type="submit" class="btn btn-default btn-primary" ng-click="submit()" ng-disabled="!isDirty">Submit</button>
-		      <button class="btn btn-danger close" ng-click="close()">Cancel</button>
+		      <button class="btn btn-default btn-primary" ng-click="submit()" ng-disabled="frmObj.$invalid || !frmObj.$dirty">Submit</button>
+		      <button class="btn btn-danger" ng-click="close()">Cancel</button>
 		    </div>
 		  </div>
 	</form>
