--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,10 +1,7 @@
 <div id="viewHome">
-	<div class="jumbotron">
-  		<h1>Welcome back, {{currentUser.userdisplayas}}!</h1>
-	  	<p>This is a home page. <br />
-	  	It shall contains some descriptions.<br />
-	  	And it hasn't been done yet.
-	  	</p>
-	  <p><a class="btn btn-primary btn-lg" href="#/userdetail" role="button">Take a look at User Detail</a></p>
-	</div>
+	<!-- Navigation area begins -->
+	<div class="container" ui-view="NavMenuView"></div>
+ 	<!-- Navigation area ends -->
+ 	
+ 	<div class="container" ui-view></div>
 </div>
