--- a/app/views/login.html
+++ b/app/views/login.html
@@ -11,5 +11,6 @@
         	ng-minlength="6">
         
         <button class="btn btn-lg btn-primary btn-block" type="submit" ng-disabled="loginForm.$invalid" ng-click="login()">Sign in</button>
+        <button class="btn btn-lg btn-block" ui-sref="register">Sign up</button>
 	</form>
 </div>
