Continue the development, part IV.

--- a/app/views/learnobject.html
+++ b/app/views/learnobject.html
@@ -29,8 +29,7 @@
 		 <div class="form-group"> 
 		    <label class="control-label col-sm-2" for="iptContent">Content</label>
 		    <div class="col-sm-10"> 
-		      <textarea class="form-control" id="iptContent" placeholder="Content" ng-model="ObjectContent"  rows="20" required>
-		      </textarea>
+			    <textarea ui-tinymce="tinymceOptions" rows="20" required ng-model="ObjectContent"></textarea>
 		 	 </div>
 		  </div>
 		  
