--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -5,6 +5,6 @@
 	  	It shall contains some descriptions.<br />
 	  	And it hasn't been done yet.
 	  	</p>
-	  <p><a class="btn btn-primary btn-lg" href="#/userdetail" role="button">Take a look at User Detail</a></p>
+	  <p><a class="btn btn-primary btn-lg" ui-sref="home.userdetail" role="button">Take a look at User Detail</a></p>
 	</div>
 </div>
