--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,7 +1,85 @@
 <div id="viewHome">
 	<!-- Navigation area begins -->
-	<div class="container" ui-view="NavMenuView"></div>
- 	<!-- Navigation area ends -->
- 	
- 	<div class="container" ui-view></div>
+	<div class="container">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed"
+						data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+						aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#/home">Home Info . Hub</a>
+				</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li class="dropdown"><a href="" class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false">Home<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a ui-sref="home.userdetail">User Detail</a></li>
+								<li role="separator" class="divider"></li>
+								<li><a href="" ng-click="logout()">Logout</a></li>
+							</ul></li>
+						<li class="dropdown"><a href="" class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false">Learning Part<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a ui-sref="home.learn.object.list">Learn Object</a></li>
+								<li><a ui-sref="home.learn.history.list">Learn History</a></li>
+								<li><a ui-sref="home.learn.award.list">Learn Award</a></li>
+							</ul></li>
+						<li class="dropdown"><a href="" class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false">Finance Part<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="#/financeaccount">Accounts</a></li>
+								<li><a href="#/financedocument">Document</a></li>
+							</ul></li>
+						<li><a href="#about">About</a></li>
+						<li class="dropdown"><a href="" class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false">Acknowledges<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a target="_blank" href="https://www.angularjs.org/">Angular JS</a></li>
+								<li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
+								<li><a target="_blank" href="https://github.com/lorenzofox3/Smart-Table">Smart-Table</a></li>
+								<li><a target="_blank" href="http://www.tinymce.com/">TinyMCE</a></li>
+								<li role="separator" class="divider"></li>
+								<li class="dropdown-header">Angular UI</li>
+								<li><a target="_blank" href="http://angular-ui.github.io/">Angular UI</a></li>
+								<li><a target="_blank" href="http://angular-ui.github.io/ui-router/">UI-Router</a></li>
+								<li><a target="_blank" href="https://github.com/angular-ui/ui-tinymce">UI-tinymce</a></li>
+								<li role="separator" class="divider"></li>
+								<li class="dropdown-header">CDNs</li>
+								<li><a target="_blank" href="http://cdn.code.baidu.com/">Baidu CDN</a></li>
+								<li><a href="">One more separated link</a></li>
+							</ul></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li class="dropdown"><a href="" class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false">Languages<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="">English</a></li>
+								<li><a href="">Chinese</a></li>
+							</ul></li>
+						<li class="dropdown"><a href="" class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false">Themes<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="">Default</a></li>
+								<li><a href="">More to come....</a></li>
+							</ul></li>
+					</ul>
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+		</nav>
+	</div>
+	<!-- Navigation area ends -->
+
+	<div class="container" ui-view></div>
 </div>
