--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,6 +1,8 @@
 <div id="viewLogin">
 	<form class="form-signin" name="loginForm">
-		<h2 class="form-signin-heading">Sign in</h2>
+	
+<!-- 		<i class="glyphicon glyphicon-log-in"></i> -->
+ 		<h2 class="form-signin-heading">Sign in</h2>
 
 		<label for="inputUser" class="sr-only">User</label> <input
 			id="inputUser" class="form-control" placeholder="User name" required
