Continue development, Part VII.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -53,6 +53,7 @@
 								<li class="dropdown-header">Angular UI</li>
 								<li><a target="_blank" href="http://angular-ui.github.io/">Angular
 										UI</a></li>
+								<li><a target="_blank" href="http://angular-ui.github.io/bootstrap/">UI Bootstrap</a></li>
 								<li><a target="_blank"
 									href="http://angular-ui.github.io/ui-router/">UI-Router</a></li>
 								<li><a target="_blank"
