--- a/app/views/learnhistory.html
+++ b/app/views/learnhistory.html
@@ -24,13 +24,13 @@
 <!-- 				<input type="text" class="form-control" id="iptObject" ng-readonly="isReadonly"
 					placeholder="Name" ng-model="ObjectName" required>
  -->		
-				<ui-select ng-model="person.selected" theme="select2" ng-disabled="isReadonly" style="min-width: 300px;">
-			    	<ui-select-match placeholder="Select a learn object or search via the name...">{{$select.selected.name}}</ui-select-match>
-			    	<ui-select-choices repeat="person in people | propsFilter: {name: $select.search, age: $select.search}">
-			      		<div ng-bind-html="person.name | highlight: $select.search"></div>
+				<ui-select ng-model="ObjectID" theme="select2" ng-disabled="isReadonly" style="min-width: 300px;">
+			    	<ui-select-match placeholder="Select a learn object or search via the name...">{{$select.selected.id}}</ui-select-match>
+			    	<ui-select-choices repeat="lrnobj in LearnObjects | propsFilter: {name: $select.search, content: $select.search}">
+			      		<div ng-bind-html="lrnobj | highlight: $select.search"></div>
 			      		<small>
-			        		email: {{person.email}}
-			        		age: <span ng-bind-html="''+person.age | highlight: $select.search"></span>
+			        		Name: {{lrnobj.name}}
+			        		Content: <span ng-bind-html="''+lrnobj.content | highlight: $select.search"></span>
 			      		</small>
 			    	</ui-select-choices>
 				</ui-select>		 	
