Development on 20150702, Part I.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -43,11 +43,9 @@
 <!-- 							data-toggle="dropdown" role="button" aria-haspopup="true" -->
 <!-- 							aria-expanded="false">Acknowledges<span class="caret"></span></a> -->
 <!-- 							<ul class="dropdown-menu"> -->
-<!-- 								<li><a target="_blank" href="https://www.angularjs.org/">Angular -->
-<!-- 										JS</a></li> -->
+<!-- 								<li><a target="_blank" href="https://www.angularjs.org/">Angular JS</a></li> -->
 <!-- 								<li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li> -->
-<!-- 								<li><a target="_blank" -->
-<!-- 									href="https://github.com/lorenzofox3/Smart-Table">Smart-Table</a></li> -->
+<!-- 								<li><a target="_blank" href="https://github.com/lorenzofox3/Smart-Table">Smart-Table</a></li> -->
 <!-- 								<li><a target="_blank" href="http://www.tinymce.com/">TinyMCE</a></li> -->
 <!-- 								<li role="separator" class="divider"></li> -->
 <!-- 								<li class="dropdown-header">Angular UI</li> -->
@@ -123,9 +121,8 @@
 	                    <li class="dropdown" dropdown>
 	                        <a role="button" class="dropdown-toggle" dropdown-toggle>Finance<b class="caret"></b></a>
 	                        <ul class="dropdown-menu">
-	                            <li><a ui-sref="home.learn.object.list">Learn Object</a></li>
-								<li><a ui-sref="home.learn.history.list">Learn History</a></li>
-								<li><a ui-sref="home.learn.award.list">Learn Award</a></li>                            
+	                            <li><a ui-sref="home.finance.account.list">Finance Account</a></li>
+								<li><a ui-sref="home.finance.document.list">Finance Document</a></li>
 	                        </ul>
 	                    </li>
 	                    <li class="dropdown" dropdown>
@@ -135,6 +132,7 @@
 								<li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
 								<li><a target="_blank" href="https://github.com/lorenzofox3/Smart-Table">Smart-Table</a></li>
 								<li><a target="_blank" href="http://www.tinymce.com/">TinyMCE</a></li>
+								<li><a target="_blank" href="http://www.tinymce.com/">Select2</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">Angular UI</li>
 								<li><a target="_blank" href="http://angular-ui.github.io/">Angular UI</a></li>
