--- a/app/css/app.css
+++ b/app/css/app.css
@@ -19,6 +19,12 @@ body {
 /*   background-color: #f5f5f5; */
 }
 
+/* Learn part */
+.select2 > .select2-choice.ui-select-match {
+      /* Because of the inclusion of Bootstrap */
+      height: 29px;
+ }
+ 
 /* Have to set height explicity on ui-view 
 to prevent collapsing during animation*/
 .ui-view-container {
