Development on 2015.7.2, Part III

--- a/app/views/financeaccountlist.html
+++ b/app/views/financeaccountlist.html
@@ -25,8 +25,8 @@
 		<tbody>
 			<tr ng-repeat="row in displayedCollection">
 				<td>{{row.id}}</td>
-				<td>{{row.categoryid}}</td>
-				<td>{{row.categoryname}}</td>
+				<td>{{row.ctgyid}}</td>
+				<td>{{row.ctgyname}}</td>
 				<td>{{row.name}}</td>
 				<td>{{row.assetflag}}</td>
 				<td>{{row.comment}}</td>
