--- a/app/views/home.html
+++ b/app/views/home.html
@@ -133,6 +133,7 @@
 								<li><a target="_blank" href="https://github.com/lorenzofox3/Smart-Table">Smart-Table</a></li>
 								<li><a target="_blank" href="http://www.tinymce.com/">TinyMCE</a></li>
 								<li><a target="_blank" href="http://www.tinymce.com/">Select2</a></li>
+								<li><a target="_blank" href="http://www.jquery.com/">jQuery</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">Angular UI</li>
 								<li><a target="_blank" href="http://angular-ui.github.io/">Angular UI</a></li>
